# ical_http_server

./: Cargo.toml  Dockerfile  Dockerfile.armv7  README.md
.github/workflows/: docker.yml
sensor_http/: Cargo.toml
sensor_http/src/: main.rs
sensor_lib/: Cargo.toml
sensor_lib/src/: duration.rs  event.rs  lib.rs
streaming_ics_parser/: Cargo.toml
streaming_ics_parser/fixtures/: multiple.ics  simple.ics
streaming_ics_parser/src/: lib.rs  line.rs  parser.rs
