[package]
name = "sensor_http"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.14.0", features = ["rt", "macros", "rt-multi-thread"] }
tracing = { version = "0.1.29", features = ["log"] }
tracing-bunyan-formatter = "0.3.0"
tracing-subscriber = { version = "0.3.2", features = ["env-filter", "fmt"] }
warp = "0.3.2"
sensor_lib = { path = "../sensor_lib" }
serde = { version = "1.0.130", features = ["derive"] }
url = { version = "2.2.2", features = ["serde"] }
futures = "0.3.17"
