[package]
name = "sensor_lib"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
chrono-tz = "0.6.0"
ical = "0.7.0"
reqwest = { version = "0.11.6", features = ["rustls-tls"] }
tokio = { version = "1.14.0", features = ["rt", "macros", "rt-multi-thread"] }
tracing = { version = "0.1.29", features = ["log"] }
