[package]
name = "sensor_lib"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
reqwest = { version = "0.11.6", default-features = false, features=["rustls-tls", "stream"] }
tokio = { version = "1.14.0", features = ["rt", "macros", "rt-multi-thread"] }
tracing = { version = "0.1.29", features = ["log"] }
streaming_ics_parser = { path = "../streaming_ics_parser" }
futures = "0.3.18"
tokio-util = { version = "0.6.9" }
